--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@ layout: default
 title: NeoScribe (th)
 ---
 
-{% if paginator.page == 1 %}
-<p>Written in <a href="http://vireax.github.io/en">en</a>, 
-<a href="http://vireax.github.io/fr">fr</a>, 
-<a href="http://vireax.github.io/km">km</a>, 
-<a href="http://vireax.github.io/th">th</a></p>
-{% endif %}
-
 <h1>Posts</h1>
 
 <!-- This loops through the paginated posts -->
@@ -37,6 +30,11 @@ title: NeoScribe (th)
   {% endif %}
   
   <span class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
-  <hr>
 </div>
+{% endif %}
+
+
+{% if paginator.page == 1 %}
+<hr>
+<p>Written in <a href="http://vireax.github.io/en">en</a>, <a href="http://vireax.github.io/fr">fr</a>, <a href="http://vireax.github.io/km">km</a>, th</p>
 {% endif %}
