--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@ title: NeoScribe (th)
 
 {% if paginator.page == 1 %}
 <hr>
-<p>Written in <a href="http://vireax.github.io/en">en</a>, <a href="http://vireax.github.io/fr">fr</a>, <a href="http://vireax.github.io/km">km</a>, th</p>
+<p>Blog written in <a href="http://vireax.github.io/en">en</a>, <a href="http://vireax.github.io/fr">fr</a>, <a href="http://vireax.github.io/km">km</a>, th</p>
 {% endif %}
